--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   <tr>
     <td width = "64" height = "64"><a href = "#"><div class = "home"></div></a></td>
     <td width = "64" height = "64"><a href = "#"><div class = "user"></div></a></td>
-	<td width = "64" height = "64"><a href = "#"><div class = "user"></div></a></td>
-	<td width = "64" height = "64"><a href = "#"><div class = "user"></div></a></td>
-	<td width = "64" height = "64"><a href = "#"><div class = "user"></div></a></td>
+    <td width = "64" height = "64"><a href = "#"><div class = "mail"></div></a></td>
     <td>&nbsp;</td>
   </tr>
 </table>
